# texbld

./: .gitignore  CHANGELOG.md  README.md  TODO.md  build-development.sh  default.nix  flake.nix  format.sh  pyproject.toml  shell.nix
.github/workflows/: build.yml  test.yml
test_files/: .gitignore
texbld/: config.py  directory.py  exceptions.py  globals.py  interface.py  logger.py
texbld/cli/: __init__.py  cli.py  cli_test.py  getsha256.py  getsha256_test.py  project.py  resource.py  resource_test.py  scaffold.py  validate.py
texbld/clients/: __init__.py  client.py  fs_test.py  github.py  github_test.py  local.py
texbld/common/: directory.py  exceptions.py  solver.py  solver_test.py
texbld/common/docker/: dockerfiles.py
texbld/common/image/: __init__.py  image.py  image_test.py  parse.py  parse_test.py  sourceimage.py
texbld/common/project/: parse.py  parse_test.py  project.py
texbld/docker/: __init__.py  autogen.py  build.py  client.py  dockercopy_test.py  dockerfile_template.jinja  dockergen.py  dockergen_test.py
texbld/parser/v1/: image.py  image_schema.json  image_test.py  project.py  project_schema.json  project_test.py
texbld/scaffold/: __init__.py  copy.py  project.py  project_test.py  scaffold.py  scaffold_test.py  validate.py
texbld/scaffold/sample_image/: image.toml
texbld/utils/: __init__.py  client.py  fs.py  fs_test.py  github.py  github_test.py  local.py  search.py
