[tool.poetry]
name = "texbld"
version = "0.3.dev0"
description = "A dockerized build tool for paper compilation"
authors = ["junikimm717 <junikimm717@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/texbld/texbld"
keywords = ["reproducibility", "docker", "LaTeX"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "texbld/parser/**/*.json",
]
exclude = [
    "**/*_test.py"
]

[tool.poetry.scripts]
texbld = "texbld.cli:run"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.3"
jsonschema = "^4.5.1"
requests = "^2.28.0"
toml = "^0.10.2"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
